welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:14: error: not found: value OUEST
      if( getDirection() == OUEST )
                            ^SnakeBuggle:14: error: type mismatch;
 found   : Unit
 required: Boolean
      if( getDirection() == OUEST )
      ^